# middleware-player-interface

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  GstHandlerControl.cpp  GstHandlerControl.h  GstUtils.cpp  GstUtils.h  InterfacePlayerPriv.h  InterfacePlayerRDK.cpp  InterfacePlayerRDK.h  LICENSE  MWPlayerTelemetry2.cpp  MWPlayerTelemetry2.hpp  NOTICE  PlayerMetadata.hpp  PlayerScheduler.cpp  PlayerScheduler.h  PlayerUtils.cpp  PlayerUtils.h  ProcessHandler.cpp  ProcessHandler.h  SocUtils.cpp  SocUtils.h  gstplayertaskpool.cpp  gstplayertaskpool.h  install-middleware.sh
.github /: CODEOWNERS
.github/workflows/: L1-tests.yml  native-full-build.yml
OSX/: OSxSetup.md
OSX/patches/: 0009-qtdemux-tm_gst-1.16.patch  0013-qtdemux-remove-override-segment-event_gst-1.16.patch  0014-qtdemux-clear-crypto-info-on-trak-switch_gst-1.16.patch  0021-qtdemux-tm-multiperiod_gst-1.16.patch  JsonHelper.patch  subttxrend-app-packet.patch  subttxrend-app-ubuntu_24_04_build.patch  subttxrend-app-xkbcommon.patch  websocket-ipplayer2-link.patch  websocket-ipplayer2-typescpp.patch  (+1 more)
baseConversion/: CMakeLists.txt  _base64.cpp  base16.cpp
closedcaptions/: CCTrackInfo.h  PlayerCCManager.cpp  PlayerCCManager.h
cmake/: FindWPEFramework.cmake
drm/: ClearKeyDrmSession.cpp  ClearKeyDrmSession.h  DRMSessionManager.cpp  DRMSessionManager.h  DrmCallbacks.h  DrmConstants.h  DrmData.h  DrmInfo.h  DrmJsonObject.cpp  DrmJsonObject.h  DrmMediaFormat.h  DrmMemorySystem.h  DrmSession.cpp  DrmSession.h  DrmSessionFactory.cpp  DrmSessionFactory.h  DrmSessionManager.cpp  DrmSessionManager.h  DrmSystems.h  DrmUtils.cpp  DrmUtils.h  HlsDrmBase.h  HlsDrmSessionManager.cpp  HlsDrmSessionManager.h  HlsOcdmBridge.cpp  HlsOcdmBridge.h  HlsOcdmBridgeInterface.cpp  HlsOcdmBridgeInterface.h  PlayerHlsDrmSessionInterface.cpp  PlayerHlsDrmSessionInterface.h  PlayerHlsDrmSessionInterfaceBase.h  base64.cpp  base64.h  processProtectionHls.cpp
drm/aes/: Aes.cpp  Aes.h
gst-plugins/: CMakeLists.txt  COPYING  COPYING.LGPL  gstinit.cpp
gst-plugins/drm/gst/: gstcdmidecryptor.cpp  gstcdmidecryptor.h  gstclearkeydecryptor.cpp  gstclearkeydecryptor.h  gstplayreadydecryptor.cpp  gstplayreadydecryptor.h  gstverimatrixdecryptor.cpp  gstverimatrixdecryptor.h  gstwidevinedecryptor.cpp  gstwidevinedecryptor.h
gst-plugins/drm/gst/test/: test_l1_gstcdmidecryptor.cpp  test_l1_gstclearkeydecryptor.cpp  test_l1_gstplayreadydecryptor.cpp  test_l1_gstverimatrixdecryptor.cpp  test_l1_gstwidevinedecryptor.cpp
gst-plugins/gst_subtec/: CMakeLists.txt  Readme.md  gstsubtecbin.cpp  gstsubtecbin.h  gstsubtecmp4transform.cpp  gstsubtecmp4transform.h  gstsubtecsink.cpp  gstsubtecsink.h  gstvipertransform.cpp  gstvipertransform.h
gst-plugins/gst_subtec/test/: test_l1_gstsubtecbin.cpp  test_l1_gstsubtecmp4transform.cpp  test_l1_gstsubtecsink.cpp  test_l1_gstvipertransform.cpp
mp4demux/: mp4demux.cpp  mp4demux.hpp
playerJsonObject/: CMakeLists.txt  PlayerJsonObject.cpp  PlayerJsonObject.h
playerLogManager/: CMakeLists.txt  PlayerLogManager.cpp  PlayerLogManager.h
playerisobmff/: playerisobmffbox.cpp  playerisobmffbox.h  playerisobmffbuffer.cpp  playerisobmffbuffer.h
scripts/: install_clone.sh  install_dependencies.sh  install_glib.sh  install_gstreamer.sh  install_gtest.sh  install_libcjson.sh  install_libdash.sh  install_options.sh  install_player.sh  install_rialto.sh  install_subtec.sh  tools.sh
subtitle/: subtitleParser.h  vttCue.h
test/pi-cli/: CMakeLists.txt  Dockerfile  README.md  commandProcessing.cpp  commandProcessing.h  main.cpp  pi-cli-ubuntu.patch
test/utests/: CMakeLists.txt  ReadMe.md  cmake_exclude_file.list  run.sh
test/utests/drm/mocks/: FakeID3Metadata.cpp  Fakeopencdm.cpp  Fakeopencdm.h  MockOpenCdm.h  gstMocks.c
test/utests/drm/ocdm/: open_cdm.h
test/utests/fakes/: CMakeLists.txt  FakeBase16.cpp  FakeDRMHelper.cpp  FakeDRMSession.cpp  FakeGLib.cpp  FakeGStreamer.cpp  FakeGstHandlerControl.cpp  FakeGstPlayerTaskPool.cpp  FakeGstUtils.cpp  FakePlayerJsonObject.cpp  FakePlayerScheduler.cpp  FakePlayerThunderInterface.cpp  FakePlayerUtils.cpp  FakeSocInterface.cpp  FakeSocUtils.cpp  FakeTextStyleAttributes.cpp  FakeThunderAccessPlayer.cpp  Fakeopencdm.cpp  Fakeopencdmsessionadapter.cpp
test/utests/mocks/: MockDrmCallbacks.h  MockDrmHelper.h  MockDrmMemorySystem.h  MockDrmSession.h  MockGLib.h  MockGStreamer.h  MockGstHandlerControl.h  MockHlsDrmSession.h  MockOpenCdm.h  MockOpenCdmSessionAdapter.h  MockPlayerConfig.h  MockPlayerJsonObject.h  MockPlayerScheduler.h  MockPlayerUtils.h  opencdmMocks.cpp  opencdmMocks.h
test/utests/ocdm/: open_cdm.h  open_cdm_adapter.h
test/utests/tests/: CMakeLists.txt
test/utests/tests/Base64PLAYER/: Base64Tests.cpp  CMakeLists.txt
test/utests/tests/DrmOcdm/: CMakeLists.txt  ClearKeyDrmSessionTests.cpp  DrmDataTests.cpp  DrmHLSTests.cpp  DrmHelperTests.cpp  DrmMemorySystemTests.cpp  DrmSessionFactoryTests.cpp  DrmSessionManagerTests.cpp  DrmSessionTests.cpp  DrmTestsRun.cpp  DrmUtilsTests.cpp  PlayerHlsDrmSessionInterfaceTests.cpp
test/utests/tests/DrmSecureClient/: CMakeLists.txt  DrmSessionTests.cpp
test/utests/tests/DrmUrlTests/: CMakeLists.txt  DrmSessionTests.cpp
test/utests/tests/GstHandlerControlTests/: CMakeLists.txt  GstHandlerControlTests.cpp
test/utests/tests/GstPlayer/: CMakeLists.txt  FunctionalTests.cpp  PauseOnPlaybackTests.cpp
test/utests/tests/GstUtilsTests/: CMakeLists.txt  GstUtilsPlayerTests.cpp  GstUtilsTests.cpp
test/utests/tests/OCDMSessionAdapter/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/OcdmBasicSessionAdapterTests/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/PluginsTests/: CMakeLists.txt  PlayerClearKeyDecryptorTests.cpp  PlayerPlayReadyDecryptorTests.cpp  PlayerVeriMatrixDecryptorTests.cpp  PlayerWidevineDecryptorTests.cpp  PluginsRun.cpp
test/utests/tests/TextStyleAttributes/: CMakeLists.txt  GetTextStyleAttributesTests.cpp
test/utests/tests/TtmlSubtecParser/: CMakeLists.txt  TtmlSubtecParserPlayer.cpp  TtmlSubtecParserTests.cpp
test/utests/tests/base16Tests/: CMakeLists.txt  base16Tests.cpp
(+44 files in other folders)
